@@ -143,6 +143,8 @@ version 2.0.0:
 	  a visibility manager - see the docs for more information
 	* gaim_gtk_conversations_get_first_unseen() to find the first conv
 	  with an "unseen" state >= to the specified state
+	* gaim_gtk_gtkspell_is_available()
+	* gaim_gtk_gtkspell_unsetup()
 
 	Signals - Changed:
 	* "received-im-msg" and "received-chat-msg" to match, both now pass a
